--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@redux-devtools/extension": "^3.2.5",
     "@colisweb/rescript-react-icons-ai": "^1.0.0",
     "@reduxjs/toolkit": "^1.9.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -20,6 +21,8 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
